--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 * text=auto
 
-*.gitattributes text eol=lf
 *.css text eol=lf
+*.gitattributes text eol=lf
+*.html text eol=lf
 *.js text eol=lf
 *.json text eol=lf
 *.ts text eol=lf
