--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint:markup": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@tiptap/starter-kit": "^2.0.0-beta.98",
+    "@tiptap/vue-3": "^2.0.0-beta.53",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10"
   },
